--- a/server/configuration.json
+++ b/server/configuration.json
@@ -3,6 +3,6 @@
     "DB_PASSWORD":"",
     "PORT":5000,
     "APP_KEY":"p0Nv9R7LMIyDIkUQrRKZeRM59/NYFCeD7nZviVf2DyI=",
-    "AUTH0_CLIENT_ID":"WPQDvmFMeBPGESMdGzG3oVp37ulpS8te",
-    "AUTH0_DOMAIN":"dev-fdvklb6a.us.auth0.com"
+    "AUTH0_CLIENT_ID":"",
+    "AUTH0_DOMAIN":""
 }
